--- a/MyHobby/about.html
+++ b/MyHobby/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Моё хобби</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
         <h1>Обо мне</h1>
         <hr>
         <div class="content">
-            <img src="photo.jpg" alt="моё фото" width="200">
+            <img src="img/photo.jpg" alt="моё фото" width="200">
             <p>Всем привет</p>
             <p>Меня зовут Константин. Я работаю слесарем КИПиА.</p>
             <p>Решил сменить профессию, для этого поступил на курсы по програмированию.
