--- a/MyHobby/index.html
+++ b/MyHobby/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Моё хобби</title>
     </head>
     <body>
@@ -21,7 +21,7 @@
             </div>
             <div class="content">
                 <h1>Добрый день!</h1>
-                <img src="witcher.png" alt="Моя любимая игра">
+                <img src="img/witcher.png" alt="Моя любимая игра">
                 <p id="p1">В этом абзаце будет что-нибудь интересное</p>
             </div>
             <footer class="footer">
