--- a/MyHobby/_pgbackup/index_1686905911.html
+++ b/MyHobby/_pgbackup/index_1686905911.html
@@ -13,38 +13,32 @@
                         <h1>Моё хобби</h1>
                     </div>
                     <ul class="navigation">
-                        <li><a href="#">Главная</a>
-                        </li>
-                        <li><a href="about.html">Обо мне</a>
-                        </li>
-                        <li><a href="contacts.html">Обратная связь</a>
-                        </li>
+                        <li><a href="#">Главная</a></li>
+                        <li><a href="about.html">Обо мне</a></li>
+                        <li><a href="contacts.html">Обратная связь</a></li>
                     </ul>
                 </div>
             </div>
             <div class="content">
-                <div class="text">
-                    <h1>Мое хобби - туристические походы.</h1>
-                    <img align="left" src="img/river.jpg" alt="Речка" width="400">
-                    <p>&nbsp;&nbsp;Это один из самых интересных и захватывающих видов активного отдыха.
+                <h1>Мое хобби - туристические походы.</h1>
+                <img src="img/witcher.png" alt="Моя любимая игра">
+                <p>&nbsp;&nbsp;Это один из самых интересных и захватывающих видов активного отдыха.
                     Туристические походы позволяют мне насладиться красотой природы, познакомиться с
                     культурой разных народов и получить массу положительных эмоций.</p>
-                    <p>&nbsp;&nbsp;Туристические походы - это не просто отдых на природе, это настоящее приключение.
+                <p>&nbsp;&nbsp;Туристические походы - это не просто отдых на природе, это настоящее приключение.
                     Мы идем по незнакомым тропам, преодолеваем препятствия, ночуем в палатках и готовим еду
                     на костре. Все это делает наш поход незабываемым.</p>
-                    <p>&nbsp;&nbsp;Еще одним преимуществом туристических походов является то, что они помогают нам улучшить
+                <p>&nbsp;&nbsp;Еще одним преимуществом туристических походов является то, что они помогают нам улучшить
                     физическую форму. Мы занимаемся спортом, ходим пешком, поднимаемся в горы и спускаемся с них.
                     Это не только укрепляет наше здоровье, но и улучшает настроение.</p>
-                    <p>&nbsp;&nbsp;Кроме того, туристические походы помогают нам лучше понимать друг друга и находить общий язык
+                <p>&nbsp;&nbsp;Кроме того, туристические походы помогают нам лучше понимать друг друга и находить общий язык
                     с другими людьми. Мы общаемся, делимся своими впечатлениями и опытом, узнаем много нового о
                     мире вокруг нас.</p>
-                    <img align="right" src="img/1.jpg" alt="Речка" width="400">
-                    <p>&nbsp;&nbsp;Наконец, туристические походы - это отличный способ провести время с семьей и друзьями. Мы
+                <p>&nbsp;&nbsp;Наконец, туристические походы - это отличный способ провести время с семьей и друзьями. Мы
                     можем отправиться в поход вместе, разделить все трудности и радости этого увлекательного
                     занятия.</p>
-                    <p>&nbsp;&nbsp;Таким образом, туристические походы - это мое любимое хобби, которое помогает мне наслаждаться
+                <p>&nbsp;&nbsp;Таким образом, туристические походы - это мое любимое хобби, которое помогает мне наслаждаться
                     жизнью и получать массу положительных эмоций каждый раз, когда я отправляюсь в новый поход.</p>
-                </div>
             </div>
             <footer class="footer">
                 <hr>
