--- a/MyHobby/_pgbackup/index_1686906720.html
+++ b/MyHobby/_pgbackup/index_1686906720.html
@@ -13,11 +13,14 @@
                         <h1>Моё хобби</h1>
                     </div>
                     <ul class="navigation">
-                        <li><a href="#">Главная</a>
+                        <li>
+                            <a href="#">Главная</a>
                         </li>
-                        <li><a href="about.html">Обо мне</a>
+                        <li>
+                            <a href="about.html">Обо мне</a>
                         </li>
-                        <li><a href="contacts.html">Обратная связь</a>
+                        <li>
+                            <a href="contacts.html">Обратная связь</a>
                         </li>
                     </ul>
                 </div>
@@ -25,7 +28,7 @@
             <div class="content">
                 <div class="text">
                     <h1>Мое хобби - туристические походы.</h1>
-                    <img align="left" src="img/river.jpg" alt="Речка" width="400">
+                    <img src="img/witcher.png" alt="Моя любимая игра">
                     <p>&nbsp;&nbsp;Это один из самых интересных и захватывающих видов активного отдыха.
                     Туристические походы позволяют мне насладиться красотой природы, познакомиться с
                     культурой разных народов и получить массу положительных эмоций.</p>
@@ -38,7 +41,6 @@
                     <p>&nbsp;&nbsp;Кроме того, туристические походы помогают нам лучше понимать друг друга и находить общий язык
                     с другими людьми. Мы общаемся, делимся своими впечатлениями и опытом, узнаем много нового о
                     мире вокруг нас.</p>
-                    <img align="right" src="img/1.jpg" alt="Речка" width="400">
                     <p>&nbsp;&nbsp;Наконец, туристические походы - это отличный способ провести время с семьей и друзьями. Мы
                     можем отправиться в поход вместе, разделить все трудности и радости этого увлекательного
                     занятия.</p>
@@ -47,9 +49,7 @@
                 </div>
             </div>
             <footer class="footer">
-                <hr>
-                <a href="about.html">Константин, 2023</a>
-                <a href="contacts.html">Мои контакты</a>
+                <hr><a href="about.html">Константин, 2023</a><a href="contacts.html">Мои контакты</a>
             </footer>
         </div>
     </body>
