--- a/MyHobby/about.html
+++ b/MyHobby/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Моё хобби</title>
+    <title>About</title>
 </head>
 <body>
 <div class="page">
     <div class="header">
         <div class="inner-header">
             <div class="logo-container">
-                <h1>Моё хобби</h1>
+                <h1>обо мне</h1>
             </div>
             <ul class="navigation">
                 <li><a href="index.html">Главная</a></li>
@@ -20,10 +20,8 @@
         </div>
     </div>
     <div class="content">
-        <h1>Обо мне</h1>
-        <hr>
-        <div class="content">
-            <img src="img/photo.jpg" alt="моё фото" width="200">
+        <div class="text">
+            <img align="left" src="img/photo.jpg" alt="моё фото" width="200">
             <p>Всем привет</p>
             <p>Меня зовут Константин. Я работаю слесарем КИПиА.</p>
             <p>Решил сменить профессию, для этого поступил на курсы по програмированию.
