--- a/MyHobby/contacts.html
+++ b/MyHobby/contacts.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Моё хобби</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Контакты</title>
 </head>
 <body>
 <div class="page">
     <div class="header">
         <div class="inner-header">
             <div class="logo-container">
-                <h1>Моё хобби</h1>
+                <h1>Мои контакты</h1>
             </div>
             <ul class="navigation">
                 <li><a href="index.html">Главная</a></li>
@@ -20,9 +20,7 @@
         </div>
     </div>
     <div class="content">
-        <h1>Мои контакты</h1>
-        <hr>
-        <div class="content">
+        <div class="text">
             <h4>Телефон:</h4>
             <p>8 (800)-xxx-xx-xx</p>
             <h4>Социальные сети: </h4>
