Заканчиваю задания модуля E3

--- a/MyHobby/contacts.html
+++ b/MyHobby/contacts.html
@@ -28,7 +28,7 @@
                 <li><a href="#">@telegram</a></li>
                 <li><a href="#">VK</a></li>
             </ul>
-            <script src="script/8.js"></script>
+            <script src="script/e3.js"></script>
         </div>
     </div>
     <footer class="footer">
