--- a/Chat/static/index.html
+++ b/Chat/static/index.html
@@ -3,9 +3,9 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-<!--    <link rel="stylesheet" href="{% static 'style/lk/style.css' %}" />-->
+    <link rel="stylesheet" href="{% static 'style/lk/style.css' %}" />
     <title>{% block title %} Чат {% endblock title %}</title>
-  <script defer src="{% static 'main.js'%}"></script><link href="{% static 'main.css' %}" rel="stylesheet"></head>
+  <script defer src="/main.js"></script><link href="/main.css" rel="stylesheet"></head>
   <body>
     <div class="wrapper">
       <header class="header">
@@ -22,10 +22,7 @@
           </ul>
         </nav>
       </header>
-      <main class="root">
-      {% block content %}
-      {% endblock content %}
-      </main>
+      <main class="root">{% block content %} {% endblock content %}</main>
       <footer class="footer"></footer>
     </div>
   </body>
