--- a/spage/src/index.html
+++ b/spage/src/index.html
@@ -3,9 +3,8 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-<!--    <link rel="stylesheet" href="{% static 'style/lk/style.css' %}" />-->
     <title>{% block title %} Чат {% endblock title %}</title>
-  <script defer src="{% static 'main.js'%}"></script><link href="{% static 'main.css' %}" rel="stylesheet"></head>
+  </head>
   <body>
     <div class="wrapper">
       <header class="header">
@@ -22,9 +21,8 @@
           </ul>
         </nav>
       </header>
-      <main class="root">
-      {% block content %}
-      {% endblock content %}
+      <main id="root" class="main">
+        {% block content %} {% endblock content %}
       </main>
       <footer class="footer"></footer>
     </div>
